# mdprotonation

./: .gitignore  .gitmodules  AGENTS.md  README.md  commitid.txt  main.py  pyproject.toml
docs-of-helper-modules/: System preparation — Acellera documentation.html
examples/: 3ptb.pka  delta-pka.ods  xxx
hf_space/: Dockerfile  README.md
mdprotonation/: __init__.py  app_state.py  chain_shift.py  charge_colors.py  online_pdb.py  pka_plot.py  presentation.py  propka_analysis.py  protonation.py  viewer.py
mdprotonation/panes/: __init__.py  chain_shift.py  explorer.py  pka_landscape.py  propka_data.py  sidebar.py
pkaScope/: __init__.py  chain_shift.py  charge_colors.py  online_pdb.py  pdb2pqr_analysis.py  pdb_utils.py  pka_plot.py  propka_analysis.py  protonation.py  ui_state.py  viewer.py
pkaScope/panes/: __init__.py  chain_shift.py  explorer.py  hbond_optimization.py  pka_landscape.py  profiles.py  sidebar.py
pkaScope/streamlit_molstar_focus_component/: __init__.py
pkaScope/streamlit_molstar_focus_component/frontend/: index.html
tests/: test_app_state.py  test_chain_shift.py  test_charge_colors.py  test_explorer.py  test_hbond_optimization_pane.py  test_online_pdb.py  test_pdb2pqr_analysis.py  test_pdb_utils.py  test_pka_plot.py  test_ui_state.py  test_viewer.py
