[project]
name = "pkaScope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "MDAnalysis>=2.10.0",
    "pdb2pqr>=3.7.1",
    "plotly>=6.6.0",
    "propka>=3.5.1",
    "streamlit>=1.55.0",
    "streamlit-molstar",
]

[tool.uv.sources]
streamlit-molstar = { path = "vendor/streamlit-molstar" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
