[project]
name = "pkaScope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "MDAnalysis>=2.10.0",
    "molviewspec",
    "pdb2pqr>=3.7.1",
    "plotly>=6.6.0",
    "propka>=3.5.1",
    "streamlit>=1.55.0",
]

[tool.uv.sources]
molviewspec = { path = "vendor/mol-view-spec/molviewspec" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
